--- a/test/src/main/jni/CMakeLists.txt
+++ b/test/src/main/jni/CMakeLists.txt
@@ -3,7 +3,6 @@ project("lsplant_test")
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_subdirectory(external/lsparself)
 add_library(test SHARED test.cpp)
 set_target_properties(test PROPERTIES CXX_SCAN_FOR_MODULES ON)
 find_package(dobby REQUIRED CONFIG)
@@ -15,4 +14,4 @@ target_sources(lsplant::lsplant INTERFACE FILE_SET CXX_MODULES BASE_DIRS ${lspla
 set_target_properties(lsplant::lsplant PROPERTIES IMPORTED_CXX_MODULES_COMPILE_FEATURES "cxx_std_23")
 set_target_properties(lsplant::lsplant PROPERTIES IMPORTED_CXX_MODULES_INCLUDE_DIRECTORIES "${lsplant_INCLUDE}")
 
-target_link_libraries(test log dobby::dobby lsplant::lsplant lsparself)
+target_link_libraries(test log dobby::dobby lsplant::lsplant)
